src/current/v22.2/zone-config-extensions.md
---
title: Multi-Region Zone Config Extensions
summary: Multi-Region Zone Config Extensions provide flexibility to multi-region SQL abstractions.
toc: true
keywords: multiregion, region, regions, zone config, zone configs, configure replication zones, replication zone, replications zones, zcfg, zcfgs
docs_area: reference
---

<span class="version-tag">New in v22.2:</span> Multi-Region _Zone Config Extensions_ are a customization tool for advanced users to persistently modify the configuration generated by the standard [multi-region SQL abstractions](multiregion-overview.html) on a per-region basis.

They are controlled using the [`ALTER DATABASE ... ALTER LOCALITY`](alter-database.html#alter-locality) statement.

Use cases for Zone Config Extensions include:

- Failover behavior
- Regions with stale read access
- Quorum placement
- Data domiciling

We strongly recommend that most users use the [default multi-region SQL abstractions](multiregion-overview.html) as much as possible. However, if you need additional customizations, using Zone Config Extensions is better than writing your own low-level [zone configs](configure-replication-zones.html) for the following reasons:

- Zone Config Extensions are persistent and kept up-to-date. Unlike raw zone config modification, which must be fully overwritten on each multi-region configuration change in order to take effect, Zone Config Extensions stay in place alongside the high-level [multi-region SQL configuration](multiregion-overview.html). This is true even if you [add new tables](create-table.html) or [regions](alter-database.html#add-region), or if a table's [locality is changed](alter-table.html#set-locality).
- They are validated against the configs already in place in a multi-region cluster. Unlike hand-written zone configs, they are designed to work properly with the configuration generated by the higher-level multi-region SQL statements. Specifically, this means:
  - [`REGIONAL`](alter-database.html#parameters) extensions don't set [lease preferences](configure-replication-zones.html#lease_preferences).
  - [`REGIONAL IN`](alter-database.html#parameters) extensions don't set [lease preferences](configure-replication-zones.html#lease_preferences), nor do they set [replica constraints](configure-replication-zones.html#constraints) or [voter constraints](configure-replication-zones.html#voter_constraints) that would conflict with the original [home region](multiregion-overview.html#regional-by-row-tables).
  - In no case will Zone Config Extensions change the [survival goals](multiregion-overview.html#survival-goals) for the database.
- They are composable. You can use Zone Config Extensions to build up approximations of many higher-level features. For an example, see [Failover regions](alter-database.html#failover-regions).
- They are region scoped. When a Zone Config Extension is attached to a [database region](multiregion-overview.html#database-regions), any [`REGIONAL BY TABLE`](multiregion-overview.html#regional-tables) or [`REGIONAL BY ROW`](multiregion-overview.html#regional-by-row-tables) tables associated with that region will have their zone configurations updated according to the settings passed via the extension. As mentioned above, this updated config will also be persisted in the face of other multi-region configuration changes.
- They are locality scoped. You can specify a Zone Config Extension that only applies to tables with certain [localities](multiregion-overview.html#table-localities). For example, to apply a Zone Config Extension to tables with the [`GLOBAL` locality](multiregion-overview.html#global-tables), use [`ALTER DATABASE ... ALTER LOCALITY GLOBAL ...`](alter-database.html#alter-locality).

{{site.data.alerts.callout_info}}
Zone Config Extensions are a property of a [database region](multiregion-overview.html#database-regions), *not* any particular [schema object](schema-design-overview.html). This differs from raw [zone configurations](configure-replication-zones.html), which may need to be assigned (and reassigned) to 10s or 100s of different schema objects on every configuration change.
{{site.data.alerts.end}}

For instructions showing how to use Zone Config Extensions, see [Use Zone Config Extensions]({% link {{ page.version.version }}/alter-database.md %}#use-zone-config-extensions).

## See also

- [Use Zone Config Extensions]({% link {{ page.version.version }}/alter-database.md %}#use-zone-config-extensions)
- [`ALTER DATABASE ... ALTER LOCALITY`](alter-database.html#alter-locality)
- [Multi-Region Capabilities Overview](multiregion-overview.html)
- [Data Domiciling](data-domiciling.html)
- [`PLACEMENT RESTRICTED`](alter-database.html#placement)
- [`SET LOCALITY`](alter-table.html#set-locality)
- [`ADD REGION`](alter-database.html#add-region)
- [`SET PRIMARY REGION`](alter-database.html#set-primary-region)
