src/current/v26.2/zone-config-extensions.md
---
title: Multi-Region Zone Config Extensions
summary: Multi-Region Zone Config Extensions provide flexibility to multi-region SQL abstractions.
toc: true
keywords: multiregion, region, regions, zone config, zone configs, configure replication zones, replication zone, replications zones, zcfg, zcfgs
docs_area: reference
---

Multi-Region _Zone Config Extensions_ are a customization tool for advanced users to persistently modify the configuration generated by the standard [multi-region SQL abstractions]({% link {{ page.version.version }}/multiregion-overview.md %}) on a per-region basis.

They are controlled using the [`ALTER DATABASE ... ALTER LOCALITY`]({% link {{ page.version.version }}/alter-database.md %}#alter-locality) statement.

Use cases for Zone Config Extensions include:

- Failover behavior
- Regions with stale read access
- Quorum placement
- Data domiciling

We strongly recommend that most users use the [default multi-region SQL abstractions]({% link {{ page.version.version }}/multiregion-overview.md %}) as much as possible. However, if you need additional customizations, using Zone Config Extensions is better than writing your own low-level [zone configs]({% link {{ page.version.version }}/configure-replication-zones.md %}) for the following reasons:

- Zone Config Extensions are persistent and kept up-to-date. Unlike raw zone config modification, which must be fully overwritten on each multi-region configuration change in order to take effect, Zone Config Extensions stay in place alongside the high-level [multi-region SQL configuration]({% link {{ page.version.version }}/multiregion-overview.md %}). This is true even if you [add new tables]({% link {{ page.version.version }}/create-table.md %}) or [regions]({% link {{ page.version.version }}/alter-database.md %}#add-region), or if a table's [locality is changed]({% link {{ page.version.version }}/alter-table.md %}#set-locality).
- They are validated against the configs already in place in a multi-region cluster. Unlike hand-written zone configs, they are designed to work properly with the configuration generated by the higher-level multi-region SQL statements. Specifically, this means:
  - [`REGIONAL`]({% link {{ page.version.version }}/alter-database.md %}#parameters) extensions don't set [lease preferences]({% link {{ page.version.version }}/configure-replication-zones.md %}#lease_preferences).
  - [`REGIONAL IN`]({% link {{ page.version.version }}/alter-database.md %}#parameters) extensions don't set [lease preferences]({% link {{ page.version.version }}/configure-replication-zones.md %}#lease_preferences), nor do they set [replica constraints]({% link {{ page.version.version }}/configure-replication-zones.md %}#constraints) or [voter constraints]({% link {{ page.version.version }}/configure-replication-zones.md %}#voter_constraints) that would conflict with the original [home region]({% link {{ page.version.version }}/table-localities.md %}#regional-by-row-tables).
  - In no case will Zone Config Extensions change the [survival goals]({% link {{ page.version.version }}/multiregion-overview.md %}#survival-goals) for the database.
  - Zone Config Extensions can set [`num_replicas`]({% link {{ page.version.version }}/configure-replication-zones.md %}#num_replicas) as low as [`num_voters`]({% link {{ page.version.version }}/configure-replication-zones.md %}#num_voters), which removes non-voting replicas while preserving the database's survival goal.
- They are composable. You can use Zone Config Extensions to build up approximations of many higher-level features. For an example, see [Failover regions]({% link {{ page.version.version }}/alter-database.md %}#failover-regions).
- They are region scoped. When a Zone Config Extension is attached to a [database region]({% link {{ page.version.version }}/multiregion-overview.md %}#database-regions), any [`REGIONAL BY TABLE`]({% link {{ page.version.version }}/table-localities.md %}#regional-tables) or [`REGIONAL BY ROW`]({% link {{ page.version.version }}/table-localities.md %}#regional-by-row-tables) tables associated with that region will have their zone configurations updated according to the settings passed via the extension. As mentioned above, this updated config will also be persisted in the face of other multi-region configuration changes.
- They are locality scoped. You can specify a Zone Config Extension that only applies to tables with certain [localities]({% link {{ page.version.version }}/multiregion-overview.md %}#table-localities). For example, to apply a Zone Config Extension to tables with the [`GLOBAL` locality]({% link {{ page.version.version }}/table-localities.md %}#global-tables), use [`ALTER DATABASE ... ALTER LOCALITY GLOBAL ...`]({% link {{ page.version.version }}/alter-database.md %}#alter-locality).

{{site.data.alerts.callout_info}}
Zone Config Extensions are a property of a [database region]({% link {{ page.version.version }}/multiregion-overview.md %}#database-regions), *not* any particular [schema object]({% link {{ page.version.version }}/schema-design-overview.md %}). This differs from raw [zone configurations]({% link {{ page.version.version }}/configure-replication-zones.md %}), which may need to be assigned (and reassigned) to 10s or 100s of different schema objects on every configuration change.
{{site.data.alerts.end}}

For instructions showing how to use Zone Config Extensions, see [Use Zone Config Extensions]({% link {{ page.version.version }}/alter-database.md %}#use-zone-config-extensions).

## See also

- [Use Zone Config Extensions]({% link {{ page.version.version }}/alter-database.md %}#use-zone-config-extensions)
- [`ALTER DATABASE ... ALTER LOCALITY`]({% link {{ page.version.version }}/alter-database.md %}#alter-locality)
- [Multi-Region Capabilities Overview]({% link {{ page.version.version }}/multiregion-overview.md %})
- [Data Domiciling]({% link {{ page.version.version }}/data-domiciling.md %})
- [`PLACEMENT RESTRICTED`]({% link {{ page.version.version }}/alter-database.md %}#placement)
- [`SET LOCALITY`]({% link {{ page.version.version }}/alter-table.md %}#set-locality)
- [`ADD REGION`]({% link {{ page.version.version }}/alter-database.md %}#add-region)
- [`SET PRIMARY REGION`]({% link {{ page.version.version }}/alter-database.md %}#set-primary-region)
- [Troubleshoot Replication Zones]({% link {{ page.version.version}}/troubleshoot-replication-zones.md %})
